Edits from review

--- a/back.tex
+++ b/back.tex
@@ -64,7 +64,7 @@ This guide was typeset with \LuaLaTeX{} in Garamond Premier by Robert Slimbach.
 His revival is based on roman type by
 \otford{16}{th} century French
 punchcutter Claude Garamond.
-Italics are inspired by the work of Garamod's contemporary Robert Granjon.
+Italics are inspired by the work of Garamond's contemporary Robert Granjon.
 
 Monospaced items are set in Matthias Tellen's
 \href{https://madmalik.github.io/mononoki/}{\texttt{mononoki}},
