--- a/hello.tex
+++ b/hello.tex
@@ -181,8 +181,8 @@ The full list of special characters is:
 # $ % ^ & _ { } ~ \
 \end{lstlisting}
 \end{leftfigure}
-All have corresponding commands
-if you want to make them appear in your document:
+Each has a corresponding command
+to produce it in your document:
 \begin{leftfigure}
 \begin{lstlisting}
 \# \$ \% \^{} \& \_ \{ \} \~{} \textbackslash
@@ -267,7 +267,7 @@ is set as
 \end{leftfigure}
 The text within the braces forms a \introduce{group},
 and all commands issued inside the group only take effect until it ends.
-Environments also also form implicit groups:
+Environments also form implicit groups:
 \begin{leftfigure}
 \begin{lstlisting}
 \begin{quote}
