--- a/history.tex
+++ b/history.tex
@@ -145,7 +145,7 @@ and \cpp{} sources.
 Instead of following this complicated process,
 the \LuaTeX{} authors hand-translated Knuth's Pascal into C
 and have been using the resulting code since 2009.\punckern\endnote{%
-Taco Hoekwater, \textit{\LuaTeX says goodbye to Pascal}
+Taco Hoekwater, \textit{\LuaTeX{} says goodbye to Pascal}
 (MAPS 39, Euro\TeX{} 2009),
 \url{https://www.tug.org/TUGboat/tb30-3/tb96hoekwater-pascal.pdf}}
 
