--- a/installation.tex
+++ b/installation.tex
@@ -21,9 +21,9 @@ Each major operating system has its own \LaTeX{} distribution:
 \item[Windows] has Mik\TeX.
     Install it from \url{https://miktex.org/download}
     as described by the tutorial.
-    Unique to the other \LaTeX{} distributions,
-    Mik\TeX{} offers the ability to automatically find and download additional
-    packages if your document uses one that isn't currently on your computer.
+    Mik\TeX{} offers the unique ability to automatically find and download
+    additional packages if your document uses one that isn't currently
+    on your computer.
 
 \item[Linux and BSD] use \TeX{} Live.
     Like most software, this is often provided through your
