--- a/international.tex
+++ b/international.tex
@@ -6,7 +6,7 @@ You may want to write with them.
 
 \section{Unicode}
 
-Digitising human language is a complicated topic that has evolved significantly
+Digitizing human language is a complicated topic that has evolved significantly
 since \LaTeX's inception, but today,
 computers usually represent text with Unicode. Briefly,
 \begin{itemize}
