--- a/latex-book.tex
+++ b/latex-book.tex
@@ -18,20 +18,8 @@
             showcrop
            ]{geometry}
 
-% Font specification.
-% Use Equity for the body text,
-% Roboto for sans serif,
-% and mononoki for monospace text.
-% Feel free to pick your own fonts or comment these lines out to use TeX's
-% traditional Computer Modern.
 \usepackage{fontspec}
 \usepackage[fleqn]{amsmath}
-%\setmainfont[Ligatures=TeX,
-%             Numbers=Lowercase,
-%             SmallCapsFont={Equity Caps A},
-%             SmallCapsFeatures={StylisticSet=10}, % Set everything in \textsc{} as small caps
-%             StylisticSet=01, % Slightly smaller quotes, asterisks, etc.
-%            ]{Equity Text A}
 
 \setmainfont[
     Ligatures=TeX,
@@ -218,7 +206,7 @@
 
 \usepackage{graphicx}
 
-\usepackage{lipsum}
+\usepackage{csquotes}
 
 \title{Modern LaTeX}
 \author{Matt Kline}
