--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -13,7 +13,7 @@ which allows line breaks in many more places,\punckern\endnote{%
 Franklin Mark Liang,
 \textit{Word Hy-phen-a-tion by Com-put-er} (Standford, 1983),
 \url{http://www.tug.org/docs/liang/}}
-this produces some of the best paragraph layout available.
+this produces some of the best paragraph layouts available.
 
 Sometimes we don't want to justify our text.
 If you want it to be ``flush left''
@@ -194,8 +194,8 @@ so that each column is about the same height.
 Some commands, like a book's \verb|\chapter|, insert page breaks.
 You can add your own with \verb|\clearpage|.
 If you are using the \texttt{twoside} document class option for double-sided
-printing, you can break to to the front of the next page with
-\verb|\cleardoublepage|
+printing, you can break to the front of the next page with
+\verb|\cleardoublepage|.
 
 \section{Footnotes}
 
