--- a/structure.tex
+++ b/structure.tex
@@ -68,11 +68,11 @@ The short version is that \TeX{} is the typesetting system that \LaTeX{}
 is built on top of---the latter is a framework of commands for the former.
 (For example, \texttt{\textbackslash documentclass} and friends are provided by
 \LaTeX{}, but the \TeX{} engine is what's actually laying out your document.)
-The long version is at the back of the book as Appendix~\ref{history}.
+The long version is at the back of this book as Appendix~\ref{history}.
 We won't discuss how to use plain \TeX{} here. That's for another book---the
 \TeX book.}
 at \url{https://ctan.org}.
-The manuals for every single package can also be found there,
+The manuals for packages can also be found there,
 so it should be your first stop when learning how to use one.
 
 \section{Titles, sections, and tables of contents}
