--- a/why.tex
+++ b/why.tex
@@ -44,7 +44,7 @@ JULY 1969, A.~D.
 
 If you care about more than \emph{what} you tell your readers, but \emph{how}
 you tell it, you should try \LaTeX.
-It's program\footnote{And a markup language,
+It's a program\footnote{And a markup language,
 and (sort of) a programming language, and a bit of a cult.
 But that's all for later.}
 for crafting written documents, like papers, presentations,
@@ -139,7 +139,7 @@ However, it comes with a few advantages:
     \end{itemize}
 \end{enumerate}
 
-\section{Another Guide?}
+\section{Another guide?}
 
 One might wonder why the world needs another \LaTeX{} guide.
 After all, it's been out for more than 30 years.
