--- a/micro.tex
+++ b/micro.tex
@@ -3,9 +3,9 @@
 
 \introduce{Microtypography} is the use of small, subliminal tweaks to improve
 a document's legibility.
-In other words,
+In other words, it is
 \begin{quote}
-Micro-typography is the art of enhancing the appearance and readability of a
+[\ldots]the art of enhancing the appearance and readability of a
 document while exhibiting a minimum degree of visual obtrusion.
 It is concerned with what happens between or at the margins of characters,
 words or lines. Whereas the macro-typographical aspects of a document
