Aspell catches embarrassing typos

--- a/back.tex
+++ b/back.tex
@@ -36,7 +36,7 @@ Read on:
 \textit{Practical Typography}, by Matthew Butterick. \\
 Available (for free!) at \url{https://practicaltypography.com}
 
-\textit{Stop Stealing Sheep \& Find Out How Type Works}, by Erik Spikermann
+\textit{Stop Stealing Sheep \& Find Out How Type Works}, by Erik Spiekermann
 
 \textit{Thinking With Type}, by Ellen Lupton
 
