--- a/fonts.tex
+++ b/fonts.tex
@@ -79,7 +79,7 @@ A typical set includes upright,
 names given the name of the typeface.\punckern\footnote{This is
 one of the places \XeLaTeX{} and \LuaLaTeX{}
 differ in a way that's noticeable to the casual user.
-The former gernally uses system libraries---such as FontConfig on Linux---to
+The former generally uses system libraries---such as FontConfig on Linux---to
 locate files from a typeface's name.
 The latter has its own font loader,
 based on code from FontForge.\punckern\endnote{\textit{\LuaTeX{} Reference}
