--- a/history.tex
+++ b/history.tex
@@ -122,7 +122,7 @@ The most recent version, 3.14159265, came out in January~2014.
     and Luigi Scarso.\punckern\endnote{\url{http://www.luatex.org}}
 \end{description}
 
-Building \TeX{} today is an\ldots{} interesting endeavour.
+Building \TeX{} today is an\ldots{} interesting endeavor.
 When it was written in the late 1970s,
 there were no large, well-documented open-source projects for students to study,
 so Knuth set out to make \TeX{} into one.
@@ -131,7 +131,7 @@ As part of this effort, \TeX{} was written in a style he calls
 documentation is interspersed throughout the code---Knuth wrote \TeX{} as a book,
 with the code interspersed between paragraphs.
 This mix of English and code is called \texttt{WEB}.\punckern\footnote{Knuth
-also released a pair of compainion programs named
+also released a pair of companion programs named
 \texttt{TANGLE} and \texttt{WEAVE}.
 The former extracts the book---as \TeX, of course---and the latter
 produces \TeX's Pascal source code.}
