--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -11,7 +11,7 @@ spacing.\punckern\endnote{Donald E.~Knuth and Michael F.~Plass,
 Combined with its ability to automatically hyphenate words,
 which allows line breaks in many more places,\punckern\endnote{%
 Franklin Mark Liang,
-\textit{Word Hy-phen-a-tion by Com-put-er} (Standford, 1983),
+\textit{Word Hy-phen-a-tion by Com-put-er} (Stanford, 1983),
 \url{http://www.tug.org/docs/liang/}}
 this produces some of the best paragraph layouts available.
 
