--- a/textformatting.tex
+++ b/textformatting.tex
@@ -77,7 +77,7 @@ point, sometimes called the PostScript point, is \otffrac{1}{72} of an inch.
 \LaTeX{}, for historical reasons, defines its point (\texttt{pt})
 as \otffrac{100}{7227} of an inch
 and the former as a ``big point''\quotekern, or \texttt{bp}.}
-but this can be adjusted by passing additonal arguments to
+but this can be adjusted by passing additional arguments to
 \verb|\documentclass|.\punckern\footnote{The standard \LaTeX{} classes accept
 \texttt{10pt}, \texttt{11pt}, or \texttt{12pt}.
 KOMA~Script classes accept arbitrary sizes with
