Move page numbers to the outer page edge

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -168,8 +168,8 @@
 \clearpairofpagestyles
 \pagestyle{scrheadings}
 \setkomafont{pagefoot}{\upshape}
-\cefoot*{\thepage} % \, is a TeX primitive for a thin space.
-\cofoot*{\thepage} % \, is a TeX primitive for a thin space.
+\lefoot*{\thepage} % \, is a TeX primitive for a thin space.
+\rofoot*{\thepage} % \, is a TeX primitive for a thin space.
 
 \usepackage{changepage} % For adjustwidth
 
