Use "big points", i.e., 1/72 in

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -5,7 +5,7 @@
 % We're using KOMA Script to hand-tune footnotes and TOC appearance.
 % It should be available in your texlive distribution,
 % which is how most distros package LaTeX.
-\documentclass[fontsize=10pt, numbers=endperiod]{scrbook}
+\documentclass[fontsize=10bp, numbers=endperiod]{scrbook}
 
 % Margins: see http://practicaltypography.com/page-margins.html and
 % http://practicaltypography.com/line-length.html
@@ -268,7 +268,7 @@
 \emergencystretch=1em
 
 \begin{document}
-\fontsize{10pt}{13pt}\selectfont
+\fontsize{10bp}{13bp}\selectfont
 
 \frontmatter
 \setcounter{secnumdepth}{0}
