--- a/history.tex
+++ b/history.tex
@@ -43,7 +43,7 @@ For years, he paused all work on his books to create his own
 digital typesetting system.
 When the dust settled in 1978, Knuth had the first version of
 \TeX.\punckern\footnote{\TeX{} is pronounced like the first syllable of
-``\textbf{tech}nician''\quotekern. It is short for the Greek
+``\textbf{tech}nician''\quotekern. It is from the Greek
 {\fontspec[Scale=MatchLowercase]{NotoSerif-Regular}τέχνη},
 for \introduce{art} or \introduce{craft}.\endnote{Knuth,
 \textit{The \TeX book}, 1}}
@@ -52,13 +52,12 @@ It's hard to appreciate how much of a revolution \TeX{} was,
 especially looking back from a time where anybody with a copy
 of Word can be their own desktop publisher.
 Adobe's \acronym{pdf} wouldn't exist for another decade, so Knuth
-invented a device-independent format, \acronym{dvi}.
-Scalable fonts were uncommon at the time, so Knuth created a system,
+and his students devised their own device-independent format, \acronym{dvi}.
+Scalable fonts were uncommon at the time, so he created a system,
 \MF, to rasterize his characters into dots on the
-page.\punckern\footnote{In some ways,
-\MF{} is more impressive than most of the TrueType and OpenType fonts
-we use today.
+page.\punckern\footnote{%
 Instead of constructing characters from lines and curves,
+as most TrueType and OpenType fonts do,
 \MF{} uses strokes of virtual pens.
 By tweaking the parameters of these pens and strokes, one can build entire
 font families from the same base designs.}
