--- a/history.tex
+++ b/history.tex
@@ -52,7 +52,8 @@ It's hard to appreciate how much of a revolution \TeX{} was,
 especially looking back from a time where anybody with a copy
 of Word can be their own desktop publisher.
 Adobe's \acronym{pdf} wouldn't exist for another decade, so Knuth
-and his students devised their own device-independent format, \acronym{dvi}.
+and his graduate students devised their own device-independent format,
+\acronym{dvi}.
 Scalable fonts were uncommon at the time, so he created a system,
 \MF, to rasterize his characters into dots on the
 page.\punckern\footnote{%
@@ -61,7 +62,7 @@ as most TrueType and OpenType fonts do,
 \MF{} uses strokes of virtual pens.
 By tweaking the parameters of these pens and strokes, one can build entire
 font families from the same base designs.}
-Perhaps most importantly, Knuth and his graduate students designed algorithms
+Perhaps most importantly, Knuth and his students designed algorithms
 to automatically hyphenate and justify lines of text into
 beautifully-typeset paragraphs.\punckern\footnote{These same algorithms went
 on to influence the ones Adobe uses in its software today.\punckern\endnote{%
