Squeeze Ch. 2 to two pages.

--- a/why.tex
+++ b/why.tex
@@ -172,7 +172,7 @@ or try to be a comprehensive reference.
 After all, you're a smart, resourceful individual who knows how to use a search
 engine.
 This book will:
-\begin{enumerate}
+\begin{enumerate}[itemsep=0pt]
 \item Teach you the very basics of using \LaTeX.
 \item Point you to places where you can learn more.
 \item Show you how to use modern technologies like OpenType and microtypography
