--- a/back.tex
+++ b/back.tex
@@ -8,10 +8,9 @@
 
 As promised at the start, this book is incomplete.
 To keep things short,
-entire \LaTeX{} features---like figures, captions, and graphics---haven't
-been mentioned.
-Use some of these resources to fill in the gaps,
-or as more thorough references:
+major \LaTeX{} features---like figures, captions, and graphics---haven't
+been discussed.
+Use some of these resources to fill in the gaps:
 
 \begin{adjustwidth}{1.5em}{0pt}
 The \LaTeX{} Wikibook, at \url{https://en.wikibooks.org/wiki/LaTeX}
