--- a/installation.tex
+++ b/installation.tex
@@ -8,8 +8,8 @@ which comes with:
     documents.\footnote{We'll actually be installing multiple \LaTeX{} programs,
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
-    Packages are pieces of code that you can place in your document to
-    do all sorts of things, like add new commands or change its style.
+    Packages are pieces of code that can be placed in your documents to
+    do all sorts of things, like add new commands or change their style.
     We'll see lots of them in action throughout this book.
 \item Miscellaneous tools, such as editors.
 \end{enumerate}
