--- a/math.tex
+++ b/math.tex
@@ -31,7 +31,7 @@ we get
 
 Typesetting mathematics is arguably the raison d'être of
 \LaTeX,\punckern\footnote{Well, \TeX} but the topic is so broad that giving
-it decent coverage would take up half the book.
+it decent coverage would take up half of this book.
 Given how wide the field of mathematics is,
 there are \emph{many} different commands and environments.
 Here, more so than any other topic,
