--- a/micro.tex
+++ b/micro.tex
@@ -38,11 +38,11 @@ This is the obvious choice,
 but falls victim to an annoying optical illusion:
 lines ending in small punctuation---like a period or a
 comma---seem shorter than lines that
-don't.\punckern\footnote{Many other optical illusions are
-relevant to typography. For example, if a circle, a square, and a triangle
+don't.\punckern\footnote{Many other optical illusions come up in typography.
+For example, if a circle, a square, and a triangle
 of equal heights are placed next to each other,
 the circle and triangle look smaller than the square.
-For this reason, circular or pointed characters (like O and A) must
+For this reason, round or pointed characters (like O and A) must
 be made slightly taller than ``flat'' ones (such as H and T) for all
 to appear the same height.\punckern\endnote{%
 Jost Hochuli, \textit{Detail in typography} (Éditions~B42, 2015), 18--19}}
@@ -56,7 +56,7 @@ To assist \LaTeX's justification algorithm,
 stretch or shrink characters horizontally to produce a layout
 with more even spacing and fewer hyphenated lines.
 You might think that distorting character shapes this way would be immediately
-noticeable to the reader,
+noticeable,
 but you're reading a book that does this on every page!
 Font expansion is applied \emph{very} slightly---by default,
 character widths are changed by no more than two percent.\punckern\footnote{%
@@ -68,7 +68,7 @@ You'll need to use \LuaLaTeX{} if you want to take advantage of it.
 
 \section{What next?}
 
-As always, see the package manual for ways these features can be tweaked.
+As always, see the package manual for ways to tweak these features.
 \texttt{microtype} is capable of a few other tricks,
 but several only work on older \LaTeX{} engines.\punckern\footnote{i.e., pdf\TeX}
 Those we do care about---such as letterspacing---can be handled with
