--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -15,8 +15,8 @@ Franklin Mark Liang,
 \url{http://www.tug.org/docs/liang/}}
 this produces some of the best paragraph layouts available.
 
-Sometimes we don't want to justify our text.
-If you want it to be ``flush left''
+But sometimes we don't want to justify our text.
+If would like it to be ``flush left''
 with a ragged right side, place it in a \texttt{flushleft} environment
 or add \verb|\raggedright| to the current group.
 To center it, place it in a
@@ -156,9 +156,9 @@ We often split documents---or parts of them---into multiple columns.
 This is especially common when printing on \textsc{a4} or \acronym{us} letter
 paper, since it allows more comfortable line widths at standard
 8--12\,pt text sizes.\punckern\footnote{You'll see different advice depending
-on where you look, but a general rule of thumb is to design layouts to give
+on where you look, but a general rule of thumb is to design layouts to have
 fewer than 90 characters (including spaces) per line.
-Shorter lines keep readers from having to scan very far to find the start of
+Shorter lines keep readers from needing to scan very far to find the start of
 the next line,
 which produces a more comfortable experience.}
 You can either add the \texttt{twocolumn} option to your document class,
@@ -227,7 +227,7 @@ KOMA~Script options, or with the \texttt{parskip} package.
     \texttt{footmisc} package.
 \item Insert horizontal and vertical space with commands like
     \verb|\vspace|, \verb|\hspace|, \verb|\vfill|, and \verb|\hfill|.
-\item Learn what units \LaTeX{} provides for specifying spacing.
+\item Learn what units \LaTeX{} provides for specifying spacing. \\
     (We've already mentioned a few here, such as
     \texttt{pt}, \texttt{bp}, and \texttt{in}.)
 \end{itemize}
