--- a/structure.tex
+++ b/structure.tex
@@ -1,8 +1,8 @@
 \chapter{Document Structure}
 \label{structure}
 
-While every \LaTeX{} document is different,
-all share a few common elements.
+Every \LaTeX{} document is different,
+but all share a few common elements.
 
 \section{Packages and the preamble}
 In the last chapter, you saw:
@@ -19,9 +19,9 @@ The space between the \verb|\documentclass| command and the start of the
 \texttt{document} environment is called the \introduce{preamble}.
 Here, we perform any setup we need---such as importing packages
 and defining commands---to control how our document
-should look.
+will look.
 As mentioned briefly in \chapref{installation},
-\introduce{packages} are bits of code that can modify your document
+\introduce{packages} are bits of code that modify your document
 in interesting ways.
 
 To import a package, add a \verb|\usepackage| command to the preamble,
@@ -47,9 +47,9 @@ should get you a \textsc{pdf} that reads
 \end{samepage}
 Like other commands, \verb|\usepackage| accepts optional arguments.
 The \texttt{geometry} package, for instance,
-can take your desired paper size and margins.
-For \acronym{us} letter paper with one-inch margins, you type:\footnote{Note
-that document arguments can be spaced in whatever way is most convenient to you,
+takes your desired paper size and margins.
+For \acronym{us} letter paper with one-inch margins, you type:\footnote{Notice
+that command arguments can be spaced in whatever way is most convenient to you,
 so long as there are no empty lines between arguments.}
 \begin{leftfigure}
 \begin{lstlisting}
@@ -60,8 +60,8 @@ so long as there are no empty lines between arguments.}
 \end{leftfigure}
 
 
-Many packages are installed as part of your \LaTeX{} distribution.
-Any you can't find locally are on the Comprehensive \TeX{}
+Many packages are installed as part of your \LaTeX{} distribution,
+Those you can't find locally are on the Comprehensive \TeX{}
 Archive Network, or \acronym{ctan},\punckern\footnote{Curious readers may
 be wondering what \TeX{} is, and how it differs from \LaTeX.
 The short version is that \TeX{} is the typesetting system that \LaTeX{}
@@ -72,7 +72,7 @@ The long version is at the back of this book as Appendix~\ref{history}.
 We won't discuss how to use plain \TeX{} here. That's for another book---the
 \TeX book.}
 at \url{https://ctan.org}.
-The manuals for packages can also be found there,
+The manuals for packages are also found there,
 so it should be your first stop when learning how to use one.
 
 \section{Titles, sections, and tables of contents}
@@ -113,15 +113,14 @@ Sections\footnote{By this I mean all levels, not just
 are automatically numbered---for example,
 the title of this chapter was produced with \verb|\chapter{Document Structure}|,
 and \LaTeX{} automatically determined that it was chapter \ref{structure}.
-You can also have \LaTeX{} automatically generate a table of contents for you
+You can also have \LaTeX{} automatically generate a table of contents
 with the \verb|\tableofcontents| command.
 
 \section{What next?}
 
 As promised, this book isn't a comprehensive reference,
 but it \emph{will} point you to places where you can learn more.
-See Appendix~\ref{resources} for additional resources.
-We'll also wrap up most chapters with a list of related topics you could
+We'll wrap up most chapters with a list of related topics you could
 explore next.
 
 Consider learning how to:
