--- a/textformatting.tex
+++ b/textformatting.tex
@@ -136,7 +136,8 @@ and the \introduce{x-height} refers to the size of lowercase letters.}
 \end{centerfigure}
 
 If the previous commands aren't enough, you can create custom sizes with
-\verb|\fontsize|, which takes the desired size and distance between baselines.
+\verb|\fontsize|, which takes both the desired point size and the
+distance between baselines.
 \verb|\fontsize| must be followed with \verb|\selectfont| to take effect.
 For example, \verb|\fontsize{30pt}{30pt}\selectfont|
 gives:
@@ -164,7 +165,6 @@ see \textit{Practical Typography}, listed in Appendix~\ref{resources}.}
     package.\punckern\footnote{Other typographical tools---like italics,
     boldface, and small caps---are generally preferable to underlining,
     but it has its uses.}
-\item Use KOMA~Script to change the size and style of your chapter or section
-    headings.
+\item Use KOMA~Script to change the size and style of your section headings.
 \item Learn the difference between italic and oblique type.
 \end{itemize}
